--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "polling-app-client",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080/",
   "private": true,
   "dependencies": {
+    "@ant-design/dark-theme": "^1.0.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.2.2",
     "react": "^16.5.2",
+    "react-contenteditable": "^3.3.3",
+    "react-dock": "^0.2.4",
     "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.1",
+    "react-inline-editing": "^1.0.10",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-youtube-embed": "^1.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -20,6 +28,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.5",
+    "customize-cra": "^0.9.1",
     "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.4.1"
   }
