--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "@ant-design/dark-theme": "^2.0.1",
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^10.0.0",
-    "antd": "^4.0.1",
-    "react": "^16.5.2",
+    "antd": "^3.26.12",
+    "react": "^16.13.0",
     "react-contenteditable": "^3.3.3",
     "react-dock": "^0.2.4",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-inline-editing": "^1.0.10",
     "react-loader-spinner": "^3.1.5",
@@ -27,9 +27,21 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.6.5",
+    "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
-    "react-app-rewire-less": "^2.1.0",
+    "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
