--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "polling-app-client",
+  "name": "space-app-client",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
     "@ant-design/dark-theme": "^2.0.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^10.0.0",
-    "antd": "^3.26.12",
+    "antd": "^3.2.2",
     "react": "^16.13.0",
     "react-contenteditable": "^3.3.3",
     "react-dock": "^0.2.4",
@@ -27,7 +27,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-import": "^1.6.5",
     "customize-cra": "^0.9.1",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.5"
