--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,3 +10,6 @@ phases:
   build:
     commands:
       - npm run build
+  post-build:
+    commands:
+      - aws s3 sync build/ s3://samuli-react-bucket
