--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,6 @@ phases:
   build:
     commands:
       - npm run build
-  post-build:
+  post_build:
     commands:
       - aws s3 sync build/ s3://samuli-react-bucket
